--- a/modal/src/App.css
+++ b/modal/src/App.css
@@ -1,5 +1,5 @@
 .modal-dialog {
-  min-width: 800px !important;
+  min-width: 500px !important;
 }
 
 .modal-header .modal-title {
@@ -22,4 +22,20 @@
   height: 1em;
   padding: .25em;
   color: #ffff !important;
+}
+
+.mover{
+ 
+  width: 520px;
+  height: 250px;
+  cursor: pointer;
+}
+
+.space{
+  width: 100%;
+  height: 100vh;
+}
+
+.modal-style{
+display: block;
 }
